Multi-release jpms compilation.